# dynamic

./: .envrc  .gitignore  pyproject.toml
benchmarks/: bench_4way.py  bench_5way.py  bench_algorithms.py  bench_embedded.py  bench_scyfi.py  datasets.py
docs/plans/: master.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md
experiments/: fig2_invertibility.py  fig3_toy_validation.py  fig4a_duffing.py  fig4b_decision.py  fig4c_lorenz.py  fig5_chaos.py
reference/: getallreferences.sh
src/dynamic/: __init__.py
src/dynamic/analysis/: __init__.py  backtracking.py  bifurcation.py  exhaustive_search.py  fallback.py  homoclinic.py  lyapunov.py  manifolds.py  pl_map_model.py  quality.py  scyfi.py  scyfi_exhaustive.py  scyfi_fast.py  scyfi_fused.py  scyfi_helpers.py  scyfi_helpers_fast.py  scyfi_hybrid.py  scyfi_newton.py  scyfi_power.py  scyfi_schur.py  scyfi_solve.py  scyfi_vectorised.py  scyfi_woodbury.py  subregions.py
src/dynamic/models/: __init__.py  alrnn.py  plrnn.py  (+1 more)
tests/: test_backtracking.py  test_bifurcation.py  test_exhaustive.py  test_homoclinic.py  test_lyapunov.py  test_manifolds.py  test_models.py  test_quality.py  test_scyfi.py  test_scyfi_algorithms.py  test_scyfi_fast.py  test_scyfi_fused.py  test_scyfi_helpers.py  test_scyfi_solve.py  test_scyfi_vectorised.py  test_setup.py  test_subregions.py  test_systems.py  test_training.py
tests/cross_validation/: conftest.py  helpers_bifurcation_stripped.jl  julia_wrapper.py  scyfi_bootstrap.jl  test_bifurcation_xval.py  test_helpers_xval.py  test_scyfi_xval.py
(+11 files in other folders)
