[project]
name = "dynamic"
version = "0.1.0"
description = "Dynamic - PyTorch research project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "torch>=2.6.0",
    "docling>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "hdbscan>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "julia: cross-validation tests requiring Julia (deselect with: -m 'not julia')",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
